--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,3 +3,6 @@ image:
 vscode:
   extensions:
     - Ikuyadeu.r@1.2.1:z5vr1v1bfS++U/aHLSXQ6Q==
+tasks:
+  - init: |
+      R -e "renv::restore(prompt=F)"
