--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,6 +3,7 @@ image:
 vscode:
   extensions:
     - Ikuyadeu.r@1.2.1:z5vr1v1bfS++U/aHLSXQ6Q==
+    - quarto.quarto@1.77.0
 tasks:
   - init: |
       R -e "renv::restore(prompt=F)"
